--- a/index.html
+++ b/index.html
@@ -55,8 +55,48 @@
             </div>
           </div>
     </header> 
-    <main>
 
+    <main class="container mx-auto">
+        <!-- featured section started-->
+        <section class="container mx-auto text-center my-24">
+            <h2 class="text-5xl font-bold mb-5">Our Featured Products</h2>
+            <p class="lg:text-w-3xl text-sm mb-10 max-auto" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 p-10 ">
+                <!-- first card -->
+                <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea1.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-xl font-bold">Lemon Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                  <!-- second card -->
+                  <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea2.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-xl font-bold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                  <!-- third card -->
+                  <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea3.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-xl font-bold">black Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+                  <!-- forth card -->
+                  <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea4.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-xl font-bold">Green Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+            </div>
+        </section>
     </main>
     <footer>
 
