--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </div>
 
                 <div>
-                    <img src="/images/banner.png" class="max-w-sm lg:max-w-lg"  />
+                    <img src="images/banner.png" class="max-w-sm lg:max-w-lg"  />
                     <div class="-mt-20 ml-10 flex items-center gap-4 drop-shadow-lg	bg-white rounded-lg	p-5 w-60">
                         <i class="fa-solid fa-star text-4xl text-amber-400"></i>
                          <div>
@@ -65,7 +65,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 p-10 ">
                 <!-- first card -->
                 <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
-                    <figure><img src="/images/tea1.png" alt="Shoes" /></figure>
+                    <figure><img src="images/tea1.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-xl font-bold">Lemon Tea</h2>
                       <p>Creamer could be replaced by fresh milk</p>
@@ -73,7 +73,7 @@
                   </div>
                   <!-- second card -->
                   <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
-                    <figure><img src="/images/tea2.png" alt="Shoes" /></figure>
+                    <figure><img src="images/tea2.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-xl font-bold">Milk Tea</h2>
                       <p>Creamer could be replaced by fresh milk</p>
@@ -81,7 +81,7 @@
                   </div>
                   <!-- third card -->
                   <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
-                    <figure><img src="/images/tea3.png" alt="Shoes" /></figure>
+                    <figure><img src="images/tea3.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-xl font-bold">black Tea</h2>
                       <p>Creamer could be replaced by fresh milk</p>
@@ -89,7 +89,7 @@
                   </div>
                   <!-- forth card -->
                   <div class="card  p-10 bg-gradient-to-r from-[#f4f4f4] to-[#f4f4f4] shadow-xl">
-                    <figure><img src="/images/tea4.png" alt="Shoes" /></figure>
+                    <figure><img src="images/tea4.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-xl font-bold">Green Tea</h2>
                       <p>Creamer could be replaced by fresh milk</p>
@@ -97,6 +97,129 @@
                   </div>
             </div>
         </section>
+<!-- featured section Ended-->
+
+<!-- great section started -->
+        <section class="my-24  flex flex-col gap-12 md:flex-row">
+            <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-8 p-10">
+                <div class="rounded-xl h-32 bg-gradient-to-r from-red-100 to bg-amber-100">
+                </div>
+                <div class=" row-span-2 bg-[#e6a6231a] rounded-lg flex justify-center items-center px-8 py-12"> 
+                    <img src="images/fresh1.png" alt="">
+                </div>
+                <div class=" row-span-2 bg-[#5776391a] rounded-lg flex justify-center items-center px-8 py-12">
+                    <img src="images/fresh2.png" alt="">
+                </div>
+                <div class="rounded-xl h-32 bg-gradient-to-r from-[#d9d9d9] to bg-[#fff]">
+                </div>
+            </div>
+
+            <div class="space-y-5 flex-1 p-10">
+                <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+                <p >The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h4 class="text-xl font-bold">Unique Taste</h4>
+                <p class="text-base font-normal">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-xl font-bold">Premium Quality</h4>
+                <p class="text-base font-normal">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
+ <!-- great section ended -->
+
+ <!-- clients section started -->
+        <section class="my-24 mx-16 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#f00] px-16 py-24 flex flex-col lg:flex-row gap-12">
+            <div class="flex lg:pr-28 items-center">
+                <div class="space-y-5">
+                    <h2 class="text-4xl lg:text-5xl font-bold text-white">Meet Our Super <br> Clients</h2>
+                     <p class="text-sm lg:text-lg text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                     <button class="btn  bg-white border-0 ">Show All</button>
+                </div>
+            </div>
+            <div class="relative">
+                <!-- next review -->
+                <div class="relative z-10 mb-16 opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- current review -->
+                <div class="absolute z-20 top-40 -left-24 lg:w-[430px] p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5  -left-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- previous review -->
+                <div class="relative z-10 opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- clients section ended -->
+
+<!-- card section started -->
+<section class="container mx-auto text-center my-24">
+    <h2 class="text-5xl font-bold mb-5">News & Events</h2>
+    <p class="lg:text-w-3xl text-sm mb-10 max-auto" >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br> by injected humour, or randomised words which don't look even slightly believable. </p>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 p-14">
+        <div class="card  bg-base-100 shadow-xl">
+            <figure><img src="images/news-.png" alt="Shoes" /></figure>
+            <div class="card-body items-center">
+               <h4 class="text-lg">Feb 05, 2027</h4>
+              <h2 class="card-title text-xl font-bold">Collecting 8 points for discount</h2>
+              <p>There are many variations of passages of Lorem Ipsum available.</p>
+              <p class="text-base font-bold">Learn More</p>
+            </div>
+          </div>
+
+          <div class="card  bg-base-100 shadow-xl">
+            <figure><img src="images/news1.png" alt="Shoes" /></figure>
+            <div class="card-body items-center">
+                <h4 class="text-lg">Feb 05, 2027</h4>
+              <h2 class="card-title text-xl font-bold">Collecting 8 points for discount</h2>
+              <p>There are many variations of passages of Lorem Ipsum available.</p>
+              <p class="text-base font-bold" >Learn More</p>
+            </div>
+          </div>
+          
+          <div class="card  bg-base-100 shadow-xl">
+            <figure><img src="images/news2.png" alt="Shoes" /></figure>
+            <div class="card-body items-center">
+                <h4 class="text-lg">Feb 05, 2027</h4>
+              <h2 class="card-title text-xl font-bold">Collecting 8 points for discount</h2>
+              <p>There are many variations of passages of Lorem Ipsum available.</p>
+              <p class="text-base font-bold">Learn More</p>
+            </div>
+          </div>
+    </div>     
+</section>
+
+
+
+
+
+
+
+<!-- card section ended -->
     </main>
     <footer>
 
