--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
  <!-- great section ended -->
 
  <!-- clients section started -->
-        <section class="my-24 mx-16 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end px-16 py-24 flex flex-col lg:flex-row gap-12">
+        <section class="my-24 lg:mx-16 mx-5 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end lg:px-16 py-24 flex flex-col lg:flex-row gap-12">
             <div class="flex lg:pr-28 items-center">
                 <div class="space-y-5">
                     <h2 class="text-4xl lg:text-5xl font-bold text-white">Meet Our Super <br> Clients</h2>
@@ -137,7 +137,7 @@
             </div>
             <div class="relative">
                 <!-- next review -->
-                <div class="relative z-10 mb-16 opacity-40 p-10 rounded-lg bg-white">
+                <div class="relative z-10 mb-16 opacity-40  p-10 rounded-lg bg-white">
                     <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p>We are providing the best and suitable home insurance services for the people who are interested
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <!-- current review -->
-                <div class="absolute z-20 top-40 -left-24 lg:w-[430px] p-10 rounded-lg bg-white">
+                <div class="absolute z-20 top-40 lg:-left-24 lg:w-[430px] p-10 rounded-lg bg-white">
                     <img class="absolute -top-5  -left-5 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p>We are providing the best and suitable home insurance services for the people who are interested
@@ -162,7 +162,7 @@
                 </div>
                 <!-- previous review -->
                 <div class="relative z-10 opacity-40 p-10 rounded-lg bg-white">
-                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                    <img class="absolute -top-5 lg:-left-5 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p>We are providing the best and suitable home insurance services for the people who are interested
                         to treatment</p>
