--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="relative">
                 <!-- next review -->
                 <div class="relative z-10 mb-16 opacity-40  p-10 rounded-lg bg-white">
-                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                    <img class="absolute -top-5 lg:-left-5 -left-2 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p>We are providing the best and suitable home insurance services for the people who are interested
                         to treatment</p>
